# game

./: .gitignore  CMakeLists.txt  README.md
data/map_data/: 0.data  1.data
src/engine/battle_system/: Battle.cpp  Battle.h  BattleMenu.cpp  BattleMenu.h  Pokemon.cpp  Pokemon.h  Trainer.cpp  Trainer.h
src/engine/core/: Application.cpp  Application.h  ApplicationState.h  Colors.cpp  Colors.h  Constants.h
src/engine/editor/: Editor.cpp  Editor.h  EditorMain.cpp  EntityMenu.cpp  EntityMenu.h
src/engine/entity_system/: Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  ComponentSerializer.cpp  ComponentSerializer.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
src/engine/game/: Game.cpp  Game.h
src/engine/input_system/: InputEnums.h  InputHandler.cpp  InputHandler.h  MouseEvent.h
src/engine/map_code/: Map.cpp  Map.h  Tile.h  TileEffect.cpp  TileEffect.h
src/engine/menu_system/: Button.cpp  Button.h  Frame.h  Interactable.h  Menu.cpp  Menu.h  MenuManager.cpp  MenuManager.h  PauseMenu.cpp  PauseMenu.h  Rectangle.cpp  Rectangle.h  StartMenu.h  Textbox.cpp  Textbox.h
src/engine/physics_system/: EntityCollisionSystem.cpp  EntityCollisionSystem.h  MovementSystem.cpp  MovementSystem.h  PathfindingSystem.cpp  PathfindingSystem.h
src/engine/render_system/: TextureManager.cpp  TextureManager.h  WindowContainer.h
test_files/: map_test.cpp
